--- a/Machigan - [EECS 498-007, 598-005]/11. Training Neural Networks 2.md
+++ b/Machigan - [EECS 498-007, 598-005]/11. Training Neural Networks 2.md
@@ -10,6 +10,10 @@ https://web.eecs.umich.edu/~justincj/slides/eecs498/498_FA2019_lecture11.pdf
 
 ___
 
+# Training dynamics
+
+아래에서 배울 내용들은 **Training 중에 시도할 수 있는 방법**들이다.
+
 # Learning Rate Scheduling
 
 예전 강의에서 **SGD, SGD + Momentum, Adagrad, RMSProp, Adam** 등, **어떠한 `Optimizer`이던지 상관없이 모든 `Optimizer`는 `Learning rate`를 `Hyperparameter`로 갖는다.**
@@ -308,3 +312,5 @@ ____
 ![alt text](image-399.png)
 
 - 이를 통해, `Learning rate`, `Weight Initialize`가 적절한 지 확인할 수 있다.
+
+# After Training
