New files added

--- a/Machigan - [EECS 498-007, 598-005]/11. Training Neural Networks 2.md
+++ b/Machigan - [EECS 498-007, 598-005]/11. Training Neural Networks 2.md
@@ -14,7 +14,7 @@ ___
 
 아래에서 배울 내용들은 **Training 중에 시도할 수 있는 방법**들이다.
 
-# Learning Rate Scheduling
+## Learning Rate Scheduling
 
 예전 강의에서 **SGD, SGD + Momentum, Adagrad, RMSProp, Adam** 등, **어떠한 `Optimizer`이던지 상관없이 모든 `Optimizer`는 `Learning rate`를 `Hyperparameter`로 갖는다.**
 
@@ -121,9 +121,9 @@ Deep Learning Model을 구축하고 프로세스 초기에 사용하기 좋다.
 
 - 이를 위해, `Training` 과정에서 특정 `Epoch`마다 `Loss`와 `Accuracy`를 저장해 위 예시처럼 그래프로 시각화할 수 있어야 한다.
 
-# Choosing Hyperparameter
+## Choosing Hyperparameter
 
-## Grid Search
+### 1. Grid Search
 
 > **가장 흔하게 시도하는 방법**
 
@@ -135,8 +135,8 @@ Deep Learning Model을 구축하고 프로세스 초기에 사용하기 좋다.
 
 하지만, 모든 가능한 `Hyperparameter` 집합에 대해 전부 테스트 해야하기 때문에 **`GPU`가 충분한 경우에만 사용할 수 있는 방법**이다.
 
-
-## Random Search
+___
+### 2. Random Search
 
 > **Grid Search가 요구하는 GPU 성능이 부담되는 경우에 주로 사용하는 방법**
 
@@ -154,7 +154,9 @@ Deep Learning Model을 구축하고 프로세스 초기에 사용하기 좋다.
 
 - 붉은색 선 부분은 **가장 성능이 좋은 `Hyperparameter`를 의미한다.**
 
-## Grid vs Random
+___
+
+### Grid vs Random
 
 > **Random Search 방법이 Grid Search에 비해 더 적은 시도를 통해 더 좋은 성능을 내고, GPU도 비교적 적게 사용할 수 있는 이유를 알아보자.**
 
@@ -314,3 +316,229 @@ ____
 - 이를 통해, `Learning rate`, `Weight Initialize`가 적절한 지 확인할 수 있다.
 
 # After Training
+
+> **성공적으로 모델을 학습시킨 이후, 더 좋은 성능을 얻기 위해 할 수 있는 작업을 살펴보자.**
+
+## Model Ensembles
+
+> **더 좋은 성능을 얻기 위해, 서로 다른 N개의 모델을 각각 훈련시킨 이후 Test time에는 모든 모델을 이용하고 결과를 평균내는 방법**
+
+![alt text](image-400.png)
+
+- 이 방법을 이용하면, 평균적으로 **1 ~ 2% 나은 결과**를 얻을 수 있다.
+
+### Tricks for Modle Ensembles
+
+![alt text](image-401.png)
+
+1. Training 중간에 **전체 Model에서의 결과를 평균**내어, Training 중 **Parameter update에 사용**할 수 있다.
+
+![alt text](image-402.png)
+
+2. `Cyclic Learning rate`가 `Model Ensemble`을 사용하는 경우에 도움이 될 때도 있다.
+
+![alt text](image-403.png)
+
+3. 실제 값의 `Parameter`를 사용하는 대신, **`Parameter`의 이동 평균**을 구하는 것이 도움이 되기도 한다.
+
+## Transfer Learning
+
+> **한 분야의 문제를 해결하기 위해서 얻은 지식과 정보를 다른 문제를 푸는데 사용하는 방법**
+
+> **CNN Architecture를 완벽하게 학습시키기 위해선 매우 큰 크기의 Dataset이 필요하다는 문제를 해결하기 위해 사용하는 방법**
+
+- 매우 **큰 Dataset으로 `Pre-training`한 모델**을 사용하면, **내가 사용하고자 하는 적은 Dataset을 이용해도 좋은 성능**을 얻을 수 있다.
+
+`Image Classification`에서 사용했던 `CNN Model`을 더 좋은 성능을 위해 다르게 사용할 수 있다.
+
+![alt text](image-404.png)
+
+1. 먼저 큰 Dataset으로 학습을 시킨다.
+
+2. 원래 `CNN Architecture`에서 마지막 `Layer`는 `Classification (Score)`를 위한 `Layer`이기 때문에 **단순 `Feature Extractor`로써의 역할만 하도록 마지막 `Layer`를 제거한다.**
+
+   - (1)에서 얻은 모델을 그대로 가져와서 **마지막 `Layer`만 제거**하고 나머지 `Parameter`는 **Freeze한다.** 
+
+    - 새롭게 분류하고자 하는 `Dataset`에 대해 **새롭게 만든 `Classifier`만 학습**한다.
+
+`Transfer Learning`을 적용한 `Model`로 `ImageNet` Dataset이 아니라, **비교적 작은 크기**의 `Caltech-101` Dataset을 분류해보니, 아래와 같은 결과를 얻을 수 있었다.
+
+![alt text](image-405.png)
+
+- 빨간색이 `Caltech-101`만을 이용하여 `Training`한 Model을 나타낸다.
+
+- 나머지 두 곡선은 각각 다른 `Loss function`을 이용하여 `ImageNet`으로 `Training`한 Model을 이용한 Model이다.
+
+- **`Pre-trained Model`을 사용하는 것이 더 효과적**임을 확인할 수 있다,
+
+`Caltech-101` 뿐만 아니라, 다른 `Dataset`에서도 `Transfer Learning`을 이용한 Model이 **더 좋은 성능**을 내고 있다.
+
+![alt text](image-406.png)
+
+다양한 분야에서도 **`Tranfer Learning`을 이용한 Model의 성능이 뛰어남을 확인**할 수 있다.
+
+![alt text](image-407.png)
+
+추가로, 기존 `CNN Architecture`를 이용하여 얻은 **`Feature Vector`에 `Nearest Neighbor` 방법을 적용하면 좋은 성능**을 얻을 수 있다.
+
+![alt text](image-408.png)
+
+즉, 기존 `CNN Architecture`를 이용하여 **`Feature Vector`를 얻고 그 위에 새로운 알고리즘을 적용**하는 방법은 효과적이다.
+
+- 가장 흔한 방법은 **내가 분류하고자 하는 `Class`에 맞는 새로운 `FC Layer`를 정의**하는 방법이다.
+
+___ 
+
+새롭게 분류하고자 하는 `Dataset`이 크지 않다면, 위 방법대로만 해도 **좋은 성능**을 얻을 수 있다.
+
+그러나, `Dataset`이 큰 경우에는 **`Fine-Tuning`을 추가적으로 해주는 것이 더 좋은 성능**을 얻을 수 있게 해준다.
+
+위에서 (2) 과정과 다르게, `Conv Layer`에 대한 `Parameter`를 **Freeze하는 것이 아니라, `Training`할 때 Update 한다.**
+
+- 즉, `Pre-Trained Model`에서의 **`Parameter` 값을 초기값**으로 사용한 상태에서, **새로운 `Dataset`에 맞추어 `Fine-Tuning`한다.** 
+
+![alt text](image-409.png)
+
+`Fine-Tuning` 시 몇 가지 팁이 있다.
+
+1. Model 전체에 대해 `Fine-Tuning` 하기 전에, 새롭게 만든 `Classifier` 먼저 `Training`하고, 전체 모델을 `Training`하는 것이 낫다.
+
+2. `Pre-Trained Model`에서의 `Parameter`를 크게 바꾸지 않도록 기존 `Learning rate`의 **1/10 수준의 작은 값의 `Learning rate`를 사용**한다.
+
+3. `ConV Layer`의 **하위 (초반부) Layer**는 `Edge`, `Corner`, `Texture` 등의 **일반적인 성질**을 나타내는 경우가 많아서 **Freeze**하고, **중간 Layer부터 `Fine-Tuning`하는 것이 더 좋은 성능**을 낼 수도 있다. 
+
+`Fine-Tuning`은 다양한 분야에서 더 좋은 성능을 낸다.
+
+예시로는 `Object-Detecting`을 들 수 있다.
+
+![alt text](image-410.png)
+
+
+___
+
+`Tranfer Learning`을 사용할 땐, **어떤 `Architecture`를 사용할 지**가 굉장히 중요해진다.
+
+일반적으로, **`ImageNet Classification Challenge`의 우승 모델**들이 다른 `Computer Vision` 문제에서 더 잘 동작하는 경향이 있다.
+
+즉, `Downstream Task` 작업에서 `ImageNet Classification`에 사용된 모델을 이용하는 것은 **굉장히 유용**하고, **좋은 성능**을 얻을 수 있다는 기대감을 준다.
+
+- `Downstream Task`: **사전 학습(pre-training)된** 모델을 활용하여 수행하는 **목표 과제(task)**
+
+`Object Detecting`에서 `ImageNet Classification` 모델을 사용한 예시를 확인할 수 있다.
+
+![alt text](image-411.png)
+
+___
+
+이러한 `Transfer Learning`을 이용할 땐, **Dataset의 크기나 종류**에 따라 **`pre-trained model`을 어떻게 수정할 지**가 달라진다. 
+
+![alt text](image-412.png)
+
+- `Dataset`의 크기가 작고, `ImageNet`과 유사할수록 적은 `Layer`를 `Training` 한다.
+
+- `Dataset`의 크기가 크고, `ImageNet`과 유사하지 않을수록 많은 `Layer`를 `Training` 한다.
+
+- 그러나, `Dataset`의 크기가 작은데 `ImageNet`과 유사하지 않은 경우에는 문제가 된다.
+
+    - 이 경우, `Classifier`부터 시작해서 **여러 시도**를 해봐야한다.
+
+`Object Detecting`, `Image Captioning` 등에서도 `Transfer learning`을 이용하고, `ImageNet`을 이용해 `Pre-trained`된 모델을 사용한다.
+
+![alt text](image-413.png)
+
+`Image Captioning`에서 사용한 `Transfer Learning`에 대해 자세히 살펴보자.
+
+![alt text](image-414.png)
+
+`Object Detecting`의 한 예시에서는 **Model을 처음부터 설계하는 방법도 `Pre-trianed Model`을 사용하는 만큼 좋은 성능을 낼 수 있지만 `Training time`에서 약 3배 더 오래 걸린다는 점을 보여준다.**
+
+![alt text](image-415.png)
+
+추가로, **`Training Dataset`이 굉장히 작은 경우**에는 **`Pre-training` + `Fine-Tuning`은 처음부터 모델을 설계하는 경우보다 좋은 성능**을 보인다.
+
+![alt text](image-416.png)
+
+- 주의할 점은, `Training Dataset`이 매우 큰 경우에서도 **`Pre-trained Model`을 사용하는 것은 `Training Time` 관점에서 이점을 가져다준다는 점이다.**
+
+## Distributed Learning
+
+> **사용 가능한 `GPU`가 여러 개 있을 때, 이를 최대한 활용하여 모델의 `Training Time`을 줄일 수 있는 방법에 대해 알아보자.**
+
+먼저 **모델 자체를 나누어 다른 GPU로 연산하는 방법**에 대해 알아보자.
+
+### 1. Run different layers in different GPUs
+
+모델의 `Layer`를 여러 부분으로 나누어 **다른 `GPU`에서 실행**할 수 있다.
+
+![alt text](image-417.png)
+
+- 그러나 이 방법은 **`Layer`의 연산이 순서대로 이루어져야 하기 때문에, `GPU`가 놀게된다는 단점**이 있다.
+
+### 2. Run parallel branches of model on different GPUs
+
+모델 중 **병렬로 처리 가능한 부분은 나누어서 다른 GPU에서 실행**하는 방법
+
+![alt text](image-418.png)
+
+- `AlexNet`에서 사용한 방법으로, (1)번 방법에 비해 효율적이기 때문에 실현 가능성이 크다.
+
+**`GPU`간의 `Synchronizing`이 굉장히 비싸다는 단점**이 있다.
+
+- 특히, 서로 다른 `GPU`에서 돌아가는 부분에 대해 `Activations`과 `Gradient` 전달이 어렵다.
+
+즉, **Model 자체를 나누는 방법은 실현하기 굉장히 어렵다.**
+
+따라서 우리는 **각 GPU에 동일한 Model을 복사하고, Training Data를 GPU 개수만큼 나누어 각 GPU에서 Training하는 방법을 사용할 수 있다.**
+
+![alt text](image-420.png)
+
+- **`Forward`와 `Backward`에서 `GPU`간의 `Communication`이 필요없다**는 장점이 있다.
+
+- `Backward` 과정 이후, `GPU`간의 `Communication`을 통해 **각각 구한 `Gradient`를 모두 더하는 과정**이 필요하다.
+
+- 실제로 **가장 많이 사용하는 방법이다.**
+
+추가로, 이 방법은 **GPU 개수에 의해 성능이 제한받지 않는다.**
+
+![alt text](image-421.png)
+
+추가로 시도할 수 있는 방법은 **각 Server내에서 Model을 나누는 방법을 시도하고, 전체 Server를 추가로 병렬 처리하는 방법이다.**
+
+![alt text](image-422.png)
+
+
+그러나 이 방법은 **필요한 `GPU`의 개수가 너무 많다는 단점**이 있다.
+
+## Large-Batch Training
+
+하나의 `GPU`에서 잘 동작하는 `Model`을 시간 절약을 위해 여러 개의 `GPU`에서 돌리고 싶은 상황을 가정해보자.
+
+- 그렇다면, 각 `GPU`로 돌리는 `Batch size`는 **하나의 `GPU`를 사용할 때 썼던 `Batch`를 `GPU` 개수로 나눈 것**이다.
+
+![alt text](image-423.png)
+
+같은 수의 `Epoch`로 $K$개의 `GPU`를 이용하여 $K$배 빠르게 `Model`을 학습시키기 위해서는 **더 큰 minibatches가 필요**하다.
+
+### Scale Learning Rate
+
+일반적으로 하나의 `GPU`에서 `Learning rate`: $\alpha$, `Batch size`: $N$으로 잘 동작하던 모델을 $K$개의 `GPU`에서 잘 동작하도록 만드려면 **`Learning rate`: $K\alpha$, `Batch size`: $KN$을 사용하는 것이 좋다.**
+
+![alt text](image-424.png)
+
+### Learning Rate Warmup 
+
+`Scale Learning Rate`처럼 `Learning rate`를 바로 $K$배 해버리면, **학습 초반에 `Loss`가 Explode되는 경우가 많다.**
+
+이를 방지하기 위해, **`Learning Rate를 0부터 시작하여 처음 5000번째 전 반복까지 Linearly Increasing하는 방법이 있다.**
+
+![alt text](image-425.png)
+
+### Other Concerns
+
+![alt text](image-426.png)
+
+### Results
+
+`ResNet`을 **큰 Batch size와 많은 수의 `GPU`를** 이용하여 **한 시간만에 학습**시킬 수 있었다는 것을 확인할 수 있다.
+
+![alt text](image-427.png)
