Update 03. Linear Classifiers.md

--- a/Machigan - [EECS 498-007, 598-005]/03. Linear Classifiers.md
+++ b/Machigan - [EECS 498-007, 598-005]/03. Linear Classifiers.md
@@ -183,7 +183,7 @@ $W$를 설정하는 과정은 아래와 같다.
 
 가장 **기본적인 `Loss function`의 형태**는 다음과 같다.
 
-데이터를 {$(x_i, y_i)^N_{i=1}$} , $x_i$: **data**, $y_i$: **label** 이라고 하자. 
+데이터를 $(x_i, y_i)^N_{i=1}$ , $x_i$: **data**, $y_i$: **label** 이라고 하자. 
 
 **Loss**는 $L_i(f(x_i, W), y_i)$라고 하자.
 
