--- a/Machigan - [EECS 498-007, 598-005]/04. Optimization.md
+++ b/Machigan - [EECS 498-007, 598-005]/04. Optimization.md
@@ -128,7 +128,7 @@ for t in range(num_steps):
 1. `Weight initialization method`
    
 2. `Number of steps`
-   - Depp Learning에서 Gradient descent를 중단하는 가장 간단한 방법
+   - Deep Learning에서 Gradient descent를 중단하는 가장 간단한 방법
    
 3. `Learning_rate` 
    - 한 번 `Local Gradient` 만큼 이동하는 크기를 제어
