--- a/Machigan - [EECS 498-007, 598-005]/04. Optimization.md
+++ b/Machigan - [EECS 498-007, 598-005]/04. Optimization.md
@@ -389,6 +389,8 @@ for t in range(num_steps):
 
 -> **이 문제를 해결하기 위해, `Bias correction`이라는 것을 추가한다.**
 
+-> `beta2`에 제곱을 하여 분`moment2`를 0보다 큰 값이 되도록 한다.
+
 ```python
 moment1 = 0
 moment2 = 0
@@ -406,7 +408,7 @@ for t in range(num_steps):
     w -= learning_rate * moment1_unbias / (moment2_unbias.sqrt() + 1e-7)
 ```
 
-학습의 초기 몇 Step 동안은 `moment1`과 `moment2`가 0일 가능성이 있으므로, 분모에 **(1 - beta ** t)를** 나눔에 따라 분모를 작게 만들어 초기 `moment` 값을 키우는 역할을 한다.
+- 학습의 초기 몇 Step 동안은 `moment1`과 `moment2`가 0일 가능성이 있으므로, 분모에 **(1 - beta ** t)를** 나눔에 따라 분모를 작게 만들어 초기 `moment` 값을 키우는 역할을 한다.
 
 > **Adam은 Deep Learning에서 General하게 가장 많이 사용되는 방법이다.**
 
