Update 05. Neural Networks.md

--- a/Machigan - [EECS 498-007, 598-005]/05. Neural Networks.md
+++ b/Machigan - [EECS 498-007, 598-005]/05. Neural Networks.md
@@ -118,7 +118,7 @@ Linear Classifier의 문제점을 극복할 방법을 알아보자.
 
 ![alt text](image-101.png)
 
-- $W$에서 {$i$, $j$} element는 **다음 Layer의 vector의 $i$번째 element에 이전 Layer의 vector의 j번째 element가 미치는 영향을 의미한다.**
+- $W$에서 ($i$, $j$) element는 **다음 Layer의 vector의 $i$번째 element에 이전 Layer의 vector의 j번째 element가 미치는 영향을 의미한다.**
     - $Wx$에서 $W$의 각 행은 다음 Layer의 벡터의 각 Element에 대응되기 때문이다.
 
 - 이 경우, **이전 Layer의 모든 element가 다음 Layer의 모든 element에 영향**을 미치는데 이를 `Fully-connected neural network` 또는 `Multi-Layer Perceptron (MLP)`이라고 부른다.
