Update 05. Neural Networks.md

--- a/Machigan - [EECS 498-007, 598-005]/05. Neural Networks.md
+++ b/Machigan - [EECS 498-007, 598-005]/05. Neural Networks.md
@@ -151,7 +151,7 @@ Linear Classifier의 문제점을 극복할 방법을 알아보자.
 
 **Question)** **여러 중복되어 보이는 Template이 많은 이유?**
 
-- 사람은 처음에 **색상 대비 (빨간색 vs 파란색)** 또는 **Oriented Edge (수평, 수직 Edge)**에 집중하는 경향이 있고 Neural Network도 마찬가지이다.
+- 사람은 처음에 **색상 대비 (빨간색 vs 파란색)** 또는 **Oriented Edge (수평, 수직 Edge)에** 집중하는 경향이 있고 Neural Network도 마찬가지이다.
 
 - 이 때문에 학습 초기에는 첫 번째 Layer의 가중치에 중복된 Template이 많은 경우가 있다.
 
