Update 05. Neural Networks.md

--- a/Machigan - [EECS 498-007, 598-005]/05. Neural Networks.md
+++ b/Machigan - [EECS 498-007, 598-005]/05. Neural Networks.md
@@ -183,7 +183,7 @@ Linear Classifier의 문제점을 극복할 방법을 알아보자.
 
 그렇다면 `score vector` $s = W_2W_1x$ 이다.
 
-행렬 곱에는 **결합법칙(Associative Law)**이 적용되기 떄문에, `Activation Function`이 없다면 **$W_2W_1x$는 여전히 Linear이다.**
+행렬 곱에는 **결합법칙(Associative Law)이** 적용되기 떄문에, `Activation Function`이 없다면 **$W_2W_1x$는 여전히 Linear이다.**
 
 따라서 **Neural Network가 Non-linear 하게 동작하기 위해서는 `Activation Function`이 필수적**이다.
 
