Update 06. Back Propagation.md

--- a/Machigan - [EECS 498-007, 598-005]/06. Back Propagation.md
+++ b/Machigan - [EECS 498-007, 598-005]/06. Back Propagation.md
@@ -256,7 +256,7 @@ def f(w0, x0, w1, x1, w2):
 class Computational_graph(object):
     # ...
     def forward(inputs):
-        # 1. [pass imputs to input gate]
+        # 1. [pass inputs to input gate]
         # 2. forward the computational graph
         for gate in self.graph.nodes_topologically_sorted():
             gate.forward()
