--- a/Machigan - [EECS 498-007, 598-005]/08. CNN Architectures.md
+++ b/Machigan - [EECS 498-007, 598-005]/08. CNN Architectures.md
@@ -106,7 +106,7 @@ Layer에 따라 나누어서 살펴보자.
 
 ![alt text](image-258.png)
 
-`Floating Potin Operation`의 횟수는 `Matrix`와 `Vector` 간의 곱셈이기 때문에, **$C_{in}$과 $C_{out}$의 곱셈**으로 구할 수 있다.
+`Floating Point Operation`의 횟수는 `Matrix`와 `Vector` 간의 곱셈이기 때문에, **$C_{in}$과 $C_{out}$의 곱셈**으로 구할 수 있다.
 
 ![alt text](image-259.png)
 
