--- a/Machigan - [EECS 498-007, 598-005]/08. CNN Architectures.md
+++ b/Machigan - [EECS 498-007, 598-005]/08. CNN Architectures.md
@@ -227,7 +227,7 @@ Layer에 따라 나누어서 살펴보자.
 
 즉, `Pooling`을 사용하면서 표현력을 늘림과 동시에, `Floting Point Operation`의 횟수는 동일하게 하기 위해 위 방법을 사용한다.
 
-`Channel`을 2배하는 이유는 **`Stride`가 2인 `Pooling`을 사용하면 `Image`가 4배 `Downsampling`**되는데 이 **`Downsampling`을 어느정도 보완하면서 `Floating Point Operation`의 횟수는 유지하기 위해 2배까지만 하는 것**이다.
+`Channel`을 2배하는 이유는 **`Stride`가 2인 `Pooling`을 사용하면 `Image`가 4배 `Downsampling`되는데** 이 **`Downsampling`을 어느정도 보완하면서 `Floating Point Operation`의 횟수는 유지하기 위해 2배까지만 하는 것**이다.
 
 ### AlexNet vs VGG-16
 
