Update 07. Convolution Networks.md

--- a/Machigan - [EECS 498-007, 598-005]/07. Convolution Networks.md
+++ b/Machigan - [EECS 498-007, 598-005]/07. Convolution Networks.md
@@ -58,7 +58,7 @@
 
 결과로 나온 `Activation map`에 대해 **두 가지 설명**을 할 수 있다.
 
-1. 출력을 **6 * 28 * 28 ($d * i * j$)**로 보면 **($i, j$) 위치는 6-dim vector**로 생각할 수 있다.
+1. 출력을 **6 * 28 * 28 ($d * i * j$)로** 보면 **($i, j$) 위치는 6-dim vector**로 생각할 수 있다.
 
     - 이를 `Grid of feature vector`라고 한다.
     - 출력을 **입력 공간 (28 * 28)과 동일한 공간**으로 생각하는 관점이다.
