Update 07. Convolution Networks.md

--- a/Machigan - [EECS 498-007, 598-005]/07. Convolution Networks.md
+++ b/Machigan - [EECS 498-007, 598-005]/07. Convolution Networks.md
@@ -353,7 +353,7 @@ ___
 
 # Convolutional Network
 
-`Convolution layer`와 `Pooling`을 이용하면, **전통적인 `Convolutional Network`**를 만들 수 있다.
+`Convolution layer`와 `Pooling`을 이용하면, **전통적인 `Convolutional Network`를** 만들 수 있다.
 
 고전적인 `Convolutional Network`의 구성은 다음과 같다.
 
