--- a/Machigan - [EECS 498-007, 598-005]/09. Hardware and Software.md
+++ b/Machigan - [EECS 498-007, 598-005]/09. Hardware and Software.md
@@ -283,7 +283,7 @@ for t in range(500):
   
 - **`Forward`와 `Backward` 함수는 모두 필수적으로 구현**되어야 한다.
 
-  - **apply()** 함수의 내부적으로 **forward()**를 호출하고, **loss.backward()**에서 **backward()**를 호출하기 때문이다.
+  - **apply()** 함수의 내부적으로 **forward()를** 호출하고, **loss.backward()에서** **backward()를** 호출하기 때문이다.
 
   - `Instance` 없이 사용되기 때문에, **@staticmethod**로 구현된 것을 확인할 수 있다. 
 
