Update 09. Hardware and Software.md

--- a/Machigan - [EECS 498-007, 598-005]/09. Hardware and Software.md
+++ b/Machigan - [EECS 498-007, 598-005]/09. Hardware and Software.md
@@ -360,7 +360,7 @@ for t in range(500):
 
 - **torch.optim**은 다양한 규칙을 가진 **Optimizer**를 포함하고 있다.
 
-- **Training**의 끝에, 항상 **optimizer.step()**과 **zero_grad()**를 반드시 해주어야 한다.
+- **Training**의 끝에, 항상 **optimizer.step()과 zero_grad()를** 반드시 해주어야 한다.
 
     - `step()`: `Weight` 변경 적용
   
@@ -608,7 +608,7 @@ for t in range(500):
 
 위 경우, `Dynamic`은 `Conv`와 `ReLu` Node를 따로 생성해야 하는데, `Static`은 미리 코드를 한 번 훑어보기 때문에, `Conv + ReLU`로 이루어진 하나의 Node를 이용하여 `Graph`를 만들 수 있다.
 
-`Optimization` 관점에서는 `Static` 방법이 더 유리하다.
+**`Optimization` 관점에서는 `Static` 방법이 더 유리하다.**
 
 
 #### Serialization
