Update 10. Training Neural Networks 1.md

--- a/Machigan - [EECS 498-007, 598-005]/10. Training Neural Networks 1.md
+++ b/Machigan - [EECS 498-007, 598-005]/10. Training Neural Networks 1.md
@@ -206,6 +206,8 @@ ___
 
 - 이 것은 `Activation funciton`에서 본 **지그재그 패턴 문제를 해결할 수 있다.**
 
+- `Input Data`가 모두 양수가 아니기 때문이다.
+
 이미지 데이터를 예를 들면, 이미제 데이터는 **픽셀값으로 0 ~ 255 사이의 값**을 가진다.
 
 이 경우, 몇몇 픽셀 값은 **평균에서 너무 멀게 떨어져 있을 수 있다.**
