Update 10. Training Neural Networks 1.md

--- a/Machigan - [EECS 498-007, 598-005]/10. Training Neural Networks 1.md
+++ b/Machigan - [EECS 498-007, 598-005]/10. Training Neural Networks 1.md
@@ -296,7 +296,7 @@ W = 0.01 * np.random.randn(Din, Dout)
 
 - `Weight` 값이 너무 크면, `Layer`를 지날수록 값이 0에서 멀어진다.
 
-- `Activation function`으로 `ReLu`나 `Sigmpoid`를 사용하면 `Local Gradient = 0`이 되어 학습이 어려워진다.
+- `Activation function`으로 `ReLu`나 `Sigmoid`를 사용하면 `Local Gradient = 0`이 되어 학습이 어려워진다.
 
 ## Xavier Initialization
 
