Update 11. Training Neural Networks 2.md

--- a/Machigan - [EECS 498-007, 598-005]/11. Training Neural Networks 2.md
+++ b/Machigan - [EECS 498-007, 598-005]/11. Training Neural Networks 2.md
@@ -257,7 +257,7 @@ ____
 
 ![alt text](image-393.png)
 
-### 2. 초반에 `Loss`가 갑소하다가 점점 학습이 이루어지지 않는 경우
+### 2. 초반에 `Loss`가 감소하다가 점점 학습이 이루어지지 않는 경우
 
 **`Learning rate`가 커서 중후반에 학습이 제대로 이루어지지 않았을 가능성이 크기 때문에 `Learning rate decay`를 시도해야 한다.**
 
