Update 11. Training Neural Networks 2.md

--- a/Machigan - [EECS 498-007, 598-005]/11. Training Neural Networks 2.md
+++ b/Machigan - [EECS 498-007, 598-005]/11. Training Neural Networks 2.md
@@ -304,7 +304,7 @@ ____
 
 일반적으로 **`Weight`를 업데이트하기 전의 `Weight` 값 자체와 `Weight`가 업데이트되는 비율**간의 **비율**은 너무 크면 좋지 않다.
 
-- `Update할 Weight 값` / `Update할 Weight의 비율`
+- `Update할 Weight 값` / `기존 Weight의 값`
 
 - **0.001과 유사한 값을 갖는 것이 좋다**고 한다.
 
