--- a/Machigan - [EECS 498-007, 598-005]/12. Recurrent Neural Networks.md
+++ b/Machigan - [EECS 498-007, 598-005]/12. Recurrent Neural Networks.md
@@ -156,6 +156,18 @@ ___
 
 - **`Input Sequence`의 길이와 `Output Sequence`의 길이가 다를 수도 있기 때문이다.**
 
+더 자세한 구현 방법을 영어를 스페인어로 변역하는 `Sequence to Sequence model`을 예시로 살펴보자.
+
+![alt text](image-472.png)
+
+- `Encoder` 이후, `Encoder`에서의 동작을 요약하는 **두 개의 벡터가 필요**하다.
+
+- 하나는 $s_0$로 `Decoder`의 `Initial hidden state`이고, 하나는 $c$로 `Encoder`에서의 전체 `Context`를 의미한다.
+
+- 보통 `Context vector`는 `Encoder`의 마지막 `Hidden state`를 그대로 사용하고, `Initial hidden state`는 `Feedforward` 방식을 거친다.
+
+- `Context vector`는 `Decoder`의 **모든 `Time step`에 입력으로 사용**된다.
+
 ### Example: Language Modeling
 
 > **`Input` Sequence를 넣었을 때, 그 다음 글자를 예측하는 모델**
