New files added

--- a/Machigan - [EECS 498-007, 598-005]/13. Attention.md
+++ b/Machigan - [EECS 498-007, 598-005]/13. Attention.md
@@ -294,7 +294,9 @@ $Q_i$에서 $i$가 `Time Step`이라고 생각할 때, $i$**=2일 경우에는 $
 
 ![alt text](image-504.png)
 
-- 몇 개의 `Head`를 사용할 지를 나타내는 $H$라는 `Hyperparameter`가 추가로 요구된가.
+- 몇 개의 `Head`를 사용할 지를 나타내는 $H$라는 `Hyperparameter`가 추가로 요구된다.
+
+- 각 `Head`는 각기 다른 `Weight Matrix`를 갖기 때문에, 각 `Head`가 각각 다른 부분에 집중할 수 있다.
 
 `Output`은 각 `Head`에서의 `Output`을 `Concat`한다.
 
@@ -345,3 +347,54 @@ ___
 - `Transformer`와 연결된다.
 
 # Transformer
+
+먼저, `Input Vector Sequence`를 이용하여 `Self Attention`을 진행한다.
+
+![alt text](image-508.png)
+
+이후, `Residual connection`을 이용하여`Gradient Flow`를 개선하고, `Layer Normalization`을 통해 `Optimization`에 도움을 준다.
+
+![alt text](image-509.png)
+
+- `Residual connection`은 같은 위치의 벡터를 더한다. 
+
+- `Layer Normalization`은 아래와 같이 동작하며, 특이한 점은 **`Self Attention`의 `Output Vector`들끼리의 상호 작용없이 각 `Output Vector`를 독립적으로 `Normalization` 한다.**
+
+- 각 `Vector` 내에서 독립적으로 `Normalization`된다.
+
+    ![alt text](image-510.png)
+
+이후, 각 `Output Vector`에 `MLP`를 통과시키고 또 다른 `Residual Connection`과 `Layer Normalization`을 추가한다.
+
+![alt text](image-512.png)
+
+- `Input Vector`와 `Output vector`의 개수는 동일해야 하지만, 각 `Vector`의 차원은 다를 수 있다.
+
+이때 `Self-Attention`부터 두 번째 `Layer Normalization`까지를 `Transformer Block`이라고 한다.
+
+- `Neural Network`에 `Layer`의 일부분으로 사용할 수 있다. 
+
+`Transformer`의 가장 큰 장점은 **각 `Input Vector`가 자기 자신내에서만 처리되기 때문에 GPU Hardware에 맞게 병렬화가 쉽고 확장하기 쉽다는 것이다.**
+
+
+> **`Transformer`는 `Transformer Block`의 `Sequence`이다.**
+
+- `Transformer`를 구현하기 위해서는 `Model`의 `Depth`, `Transformer block의 개수`, `Head의 개수`를 정하는 `Hyperparameter`가 요구된다.
+
+**Attention is all you need** 논문에서는 아래와 같은 `Hyperparamemter`를 사용하였다.
+
+![alt text](image-513.png)
+
+- $D$: Query dimension
+
+- `Head`: Self Attention에서 사용하는 Head의 개수
+
+## Transfer Learning
+
+`Transformer`를 이용하여 `Natural Language Processing` 분야에서 `CNN`의 `ImageNet`과 같이 `Transfer Learning`으로 뛰어난 성능을 얻을 수 있다.
+
+- 인터넷에서 얻은 대규모 `Text Dataset`으로 `Pretraining`을 하고, 하는 `Downstream task`에 맞는 Dataset을 이용하여 `Finetuning`하면 좋은 성능을 얻을 수 있다.
+
+`ImageNet`과 비슷하게 더 좋은 성능을 보이는 `Transformer`를 얻고자 여러 시도가 있었다.
+
+![alt text](image-514.png)
