New filed added

--- a/Machigan - [EECS 498-007, 598-005]/15. Object Detection.md
+++ b/Machigan - [EECS 498-007, 598-005]/15. Object Detection.md
@@ -282,4 +282,21 @@ ___
 
 ### 방법 1. RoI Pool
 
+먼저, `Input image`에서의 `RoI`를 `Feature Space`에 맞게 맞춘다. 이때, 정확히 안 맞을 수도 있는데 이는 적당히 수정한다.
+
+- 정렬하는 과정을 `Snapping`이라고 한다.
+  
+![alt text](image-590.png)
+![alt text](image-589.png)
+
+이후, `Feature Space`에서의 `RoI`를 **Max-pooling이 가능하도록 N*N 형태로 나눈다.**
+
+- 정확하게 N등분 되지 않으면 적당히 조절해서 나눈다.
+
+`Feature Space` 속 `RoI`에 대해 `Max-pooling`을 진행한다.
+
 ![alt text](image-588.png)
+
+위 방법을 통해 **`Feature Space`에서의 `RoI`를 항상 고정된 Size로 만들 수 있고 미분이 가능하기 때문에 `Backpropagation`도 가능하다.**
+
+그러나 이 방법은 **`Input image`에서의 `RoI`를 정렬하는 과정에서 정보가 잘못 전달될 수 있다는 단점이 있다.**
