New files added

--- a/Machigan - [EECS 498-007, 598-005]/15. Object Detection.md
+++ b/Machigan - [EECS 498-007, 598-005]/15. Object Detection.md
@@ -254,7 +254,9 @@ ___
 
 먼저 전체 이미지에 대해 `Pretrained ConvNet`을 적용한다.
 
-이후, `Feature Vector`에서 `RoI`를 설정하고, `Crop + Resize`한다.
+이후, `Feature Vector`에 맞게 `RoI`를 설정하고, `Crop + Resize`한다.
+
+- `RoI`를 찾을 때는 `Selective Search`라는 `Heuristic algorithm`을 사용한다.
 
 - 원본 이미지에서 `RoI`를 찾고, `RoI`를 `Feature Space`에 맞추어 변경한다.
 
@@ -285,6 +287,8 @@ ___
 먼저, `Input image`에서의 `RoI`를 `Feature Space`에 맞게 맞춘다. 이때, 정확히 안 맞을 수도 있는데 이는 적당히 수정한다.
 
 - 정렬하는 과정을 `Snapping`이라고 한다.
+
+- 정수로 반올림한다.
   
 ![alt text](image-590.png)
 ![alt text](image-589.png)
@@ -300,3 +304,129 @@ ___
 위 방법을 통해 **`Feature Space`에서의 `RoI`를 항상 고정된 Size로 만들 수 있고 미분이 가능하기 때문에 `Backpropagation`도 가능하다.**
 
 그러나 이 방법은 **`Input image`에서의 `RoI`를 정렬하는 과정에서 정보가 잘못 전달될 수 있다는 단점이 있다.**
+
+
+### 방법 2. RoI Align
+
+방법 1에서 `Allignment error`를 줄이기 위해 `Bilinear interpolation`을 사용할 수 있다.
+
+![alt text](image-592.png)
+
+- 정수로 반올림하는 대신, 근처 4개의 정수 값을 가중합하여 소수값을 유지한다.
+  
+![alt text](image-591.png)
+
+## Fast R-CNN vs Slow R-CNN
+
+기본적인 차이점은 `ConvNet`과 `Crop`의 적용 순서이다.
+
+![alt text](image-593.png)
+
+`Fast R-CNN`이 `Slow R-CNN`에 비해 훨씬 빠른 것을 확인할 수 있다.
+
+![alt text](image-594.png)
+
+그러나 `Test time`에 `Fast R-CNN`에서 `Region Proposal`을 포함하는 경우와 포함하지 않는 경우를 살펴보면, **대부분의 시간을 `Region Proposal`이라는 휴리스틱 알고리즘에 사용하는 것을 확인할 수 있다.**
+
+따라서, `Region Proposal` 역시, `Neural Network` 기반으로 동작하도록 할 필요가 있다.
+
+## Faster R-CNN
+
+> **Region Proposal까지 Neural Network에서 수행하는 Fast R-CNN**
+
+`Pretrained CNN`으로 `Input Image`를 통과시켜 `Feature map`을 얻고, `Region Proposal Network (RPN)`이라는 `Network`를 통과시켜 `RoI`를 얻는다.
+
+이후 과정은 `Fast R-CNN`과 동일하다.
+
+![alt text](image-595.png)
+
+### Region Proposal Network (RPN)
+
+`CNN`을 통과시켜 얻은 `Feature Map`에 `Anchor box`라는 `box`를 `Sliding`하는 것을 상상할 수 있다.
+
+- 가운데 하나의 `Cell`을 기준으로 고정된 `Anchor box`를 사용하고, 각 `Cell`에 대해 모든 `Anchor box`가 있다고 가정한다.
+
+각 **`Anchor box`가 `Object`를 포함하고 있는지 아닌지의 두 가지 카테코리로 ConvNet을 학습**시키면 `Region Proposal Network`를 구현할 수 있다.
+
+- 객체를 포함한다고 판단되면 양수값을, 객체를 포함하지 않는다고 판단되면 음수값을 반환하도록 하고, `Softmax`를 이용하여 `Loss`를 구한다.
+
+![alt text](image-596.png)
+
+- 파란색 `Cell`이 가운데 기준으로 있는 `Anchor box`들을 확인할 수 있다.
+
+고정된 `Anchor box`가 특정 객체에 적합하지 않을 수 있으므로 `RPN`이 `Box Transform`까지 학습할 수 있게 할 수 있다.
+
+![alt text](image-597.png)
+
+`Box Transformation`을 사용하더라도 **하나의 객체에 하나의 `Anchor box`를 적용하는 것은 적합하지 않을 수 있다.**
+
+이를 해결하기 위해, 각기 다른 크기의 여러 개($K$)의 `Anchor box`를 적용한다.
+
+- 각 `Anchor`의 크기를 지정하는 $K$개의 `Hyperparameter`가 추가로 요구된다.
+
+![alt text](image-598.png)
+
+____
+
+결론적으로 `Faster R-CNN`은 4개의 `Loss`를 갖는다.
+
+![alt text](image-599.png)
+
+`Faster R-CNN`은 `Test time`에 `Fast R-CNN`에 비해 10배 더 빠르다.
+
+![alt text](image-600.png)
+
+`Faster R-CNN`은 `Two-stage object detector`라고 불린다.
+
+- `Feature map`과 `RoI`를 추출하는 부분과 실제 `Object`의 종류와 `Box regression`을 하는 부분으로 나뉜다.
+
+![alt text](image-601.png)
+
+그러나, **두 Stage로 나누는 것이 필요없지, 한 Stage에 전부 해결할 수도 있다.**
+
+___
+
+### Single-Stage Object Detector (SSD)
+
+`RPN`에서 `Object`인지 여부를 판단하는 대신, `Class score`를 예측하도록 하는 방법이다.
+
+- `CNN` ~ `RPN`까지의 과정과 유사하고, $C+1$개의 `Category`에 대해 예측해야된다는 점이 다르다.
+
+![alt text](image-605.png)
+![alt text](image-602.png)
+
+____
+
+`Object Detection`에 위에서 배운 모든 `Network`를 사용할 수 있고, `Backbone CNN`으로 다른 종류의 `CNN`를 사용하거나 다른 `IoU` 임계값을 사용하는 등, **많은 `Hyperparamter`가 요구**된다.
+
+- 당연하게도 어떤 것을 선택하는지에 따라 다른 성능을 보인다.
+
+그러나, 일반적으로 좋은 성능을 보이는 방법은 있다.
+
+![alt text](image-603.png)
+
+- **`Faster R-CNN`은 `Single Stage` 방식보다 느리지만, 더 정확하다.**
+
+    - `Image`를 살펴보기 위해 `CNN`을 적용하는 횟수가 다르기 때문에 `Image`를 살펴볼 기회가 `Faster R-CNN`이 더 많다.
+
+- **`Backbone Network`가 클수록 정확도가 높은 경향**이 있다.
+
+하지만 위의 정보는 2017년의 정보이고, 2019년에는 다른 경향을 보인다.
+
+우선, `GPU`에 발전으로 인해 `Training`을 더 오래할 수 있었다.
+
+`Feature pyramid Network`라는 것으로 `Multi-scale feature`을 얻고 `R-CNN`을 적용할 수 있었다.
+
+`Backbone network`로 `ResNext`를 사용하는 것이 일반적으로 좋다.
+
+`Single Stage` 방식의 성능이 `Faster R-CNN`과 견줄 정도로 좋아졌다.
+
+`Mask R-CNN`이라는 굉장히 큰 모델이 생겼다.
+
+![alt text](image-604.png)
+
+
+- `Facebook`의 `Detectron`이라는 `Open source`에서 위 내용을 적용한 모델을 사용할 수 있다.
+
+
+> **고려해야될 것이 굉장히 많기 때문에 `Open source`를 쓰거나 `Pretrained model`을 쓰는 것을 추천한다.**
