--- a/Machigan - [EECS 498-007, 598-005]/15. Object Detection.md
+++ b/Machigan - [EECS 498-007, 598-005]/15. Object Detection.md
@@ -1,4 +1,4 @@
-# 15.Object Detection
+# 15. Object Detection
 
 **`강의 영상`**                      
 
@@ -295,7 +295,7 @@ ___
 
 이후, `Feature Space`에서의 `RoI`를 **Max-pooling이 가능하도록 N*N 형태로 나눈다.**
 
-- 정확하게 N등분 되지 않으면 적당히 조절해서 나눈다.
+- 정확하게 N등분 되지 않으면 **각 크기가 비슷해지도록** 적당히 조절해서 나눈다.
 
 `Feature Space` 속 `RoI`에 대해 `Max-pooling`을 진행한다.
 
@@ -305,16 +305,34 @@ ___
 
 그러나 이 방법은 **`Input image`에서의 `RoI`를 정렬하는 과정에서 정보가 잘못 전달될 수 있다는 단점이 있다.**
 
+추가로, `Grid Cell`에 `Snap`하게 되면 `Backpropagation`의 과정에서 `Forward`때 **`Snap`이 된 구역으로 `Gradient`를 전달할 수 없다.**
+
 
 ### 방법 2. RoI Align
 
 방법 1에서 `Allignment error`를 줄이기 위해 `Bilinear interpolation`을 사용할 수 있다.
 
+- 이를 위해 `Snapping`을 제거해야 한다!
+
+먼저 `RoI`를 동일한 크기의 영역으로 나누고, 각 영역에서 동일한 개수로 특정 `Element`로 `Sampling`한다.
+
+이후, 각 영역에서  `Bilinear Interpolation`을 적용하여 `Sampling`한다.
 ![alt text](image-592.png)
 
 - 정수로 반올림하는 대신, 근처 4개의 정수 값을 가중합하여 소수값을 유지한다.
-  
+
+중요한 점은, `Bilinear Interpolation`은 **미분이 가능하다는 것이며, 이 때문에 `Input Image`나 `Bounding box`에 `Upstream Gradient`를 전달할 수 있게 된다.**
+
+![alt text](image-611.png)
+
+- 4개의 회색점이 원래 `Image`의 실제값이고, 초록색 점이 `Bilinear Interpolation`을 이용해 구한 `Sample` 값이다.
+
+- 기존에 단순 `Snapping`한 것 대신, **위 식을 적용하면 `Sample`값을 실제값을 이용한 수식으로 구했기 때문에 `Gradient` 전달이 가능**하다.
+
+이후, 각 `Sub-Region`에서 4개씩 `Sampling`을 했다면, 4개의 `Sample`에 대해 `Max-pooling`을 하여 일정한 크기의 `RoI` 를 얻을 수 있다.  
+
 ![alt text](image-591.png)
+
 
 ## Fast R-CNN vs Slow R-CNN
 
@@ -430,3 +448,4 @@ ____
 
 
 > **고려해야될 것이 굉장히 많기 때문에 `Open source`를 쓰거나 `Pretrained model`을 쓰는 것을 추천한다.**
+
