Update 12. Recurrent Neural Networks.md

--- a/Machigan - [EECS 498-007, 598-005]/12. Recurrent Neural Networks.md
+++ b/Machigan - [EECS 498-007, 598-005]/12. Recurrent Neural Networks.md
@@ -364,7 +364,7 @@ ___
 
 - `Cell`은 **기억 유지 + 다음 Unit에 영향**, `Hidden`은 **출력 관여 + 다음 Unit에 영향**
 
-각 `Time Step`마다 **4개의 gate ($i, g, o, g$)를** 계산한다.
+각 `Time Step`마다 **4개의 gate ($i, f, o, g$)를** 계산한다.
 
 각 Gate의 의미는 아래와 같다.
 
