Update 12. Recurrent Neural Networks.md

--- a/Machigan - [EECS 498-007, 598-005]/12. Recurrent Neural Networks.md
+++ b/Machigan - [EECS 498-007, 598-005]/12. Recurrent Neural Networks.md
@@ -388,7 +388,7 @@ ___
 
 - `현재 Cell`은 `Previous Cell`을 잊을 정도($C_{t-1} \cdot f$)와 `Input` ($i \cdot g$)을 적을 정도의 합으로 나타낸다.
 
-- `Next Hidden Unit`은 `현재 Cell`의 정보를 `Next Cell`이나 `Output`에 **얼마나 드러낼 것**인지($o \cdot tanh(C_t)$)로 나타낸다.
+- `Next Hidden Unit`은 `현재 Cell`의 정보를 `Next Cell`이나 `Output`에 **얼마나 드러낼 것**인지 즉, $o \cdot tanh(C_t)$로 나타낸다.
 
 ## Backpropagation
 
