--- a/Machigan - [EECS 498-007, 598-005]/13. Attention.md
+++ b/Machigan - [EECS 498-007, 598-005]/13. Attention.md
@@ -268,7 +268,7 @@ ____
 
 - **`Self Attention`은 `Input`의 순서가 중요한 작업에는 불리할 수 있다.**
 
-일반적인 `Attention`의 경우에는 **`Query`가 `Input`의 영향을 받지 않기** 때문에, **`Key`와 `Query`를 곱하는 과정에서 값이 변해 일반적으로 `Permutation Equivariant`하지 않다.**
+`Cross Attention`의 경우에는 **`Query`가 `Input`의 영향을 받지 않기** 때문에, **`Key`와 `Query`를 곱하는 과정에서 값이 변해 일반적으로 `Permutation Equivariant`하지 않다.**
 
 `Self Attention`이 `Permutation Equivariant`하다는 문제점을 해결하기 위해, `Position Encoding`을 추가할 수 있다.
 
