Update 14. Visualizing and Understanding.md

--- a/Machigan - [EECS 498-007, 598-005]/14. Visualizing and Understanding.md
+++ b/Machigan - [EECS 498-007, 598-005]/14. Visualizing and Understanding.md
@@ -328,7 +328,7 @@ ___
 
 1. 먼저, `Pretrained model`에 `Texture input`을 넣어 `Gram Matrix`을 얻는다.
 
-2. 이후, `Noisy input`으로 `Pretrained model`을 이용하여 `Gradm Matrix`를 얻고, (1)에서의 `Gram Matrix`와의 차이를 이용하여 `Loss`를 계산한다.
+2. 이후, `Noisy input`으로 `Pretrained model`을 이용하여 `Gram Matrix`를 얻고, (1)에서의 `Gram Matrix`와의 차이를 이용하여 `Loss`를 계산한다.
 
 3. `Loss`를 이용하여 `Backpropagation`한다.
 
