Update 15. Object Detection.md

--- a/Machigan - [EECS 498-007, 598-005]/15. Object Detection.md
+++ b/Machigan - [EECS 498-007, 598-005]/15. Object Detection.md
@@ -400,7 +400,7 @@ ____
 
 ![alt text](image-601.png)
 
-그러나, **두 Stage로 나누는 것이 필요없지, 한 Stage에 전부 해결할 수도 있다.**
+그러나, **두 Stage로 나누는 대신, 한 Stage에 전부 해결할 수도 있다.**
 
 ___
 
