Update 16. Detection and Segmentation.md

--- a/Machigan - [EECS 498-007, 598-005]/16. Detection and Segmentation.md
+++ b/Machigan - [EECS 498-007, 598-005]/16. Detection and Segmentation.md
@@ -77,13 +77,13 @@ ___
 
 `Anchor Box`에 의존하지 않고 `Neural Network`를 이용하여 `Object Detetion` 하는 방법으로 `CornetNet`을 제시할 수 있다.
 
-`Box`를 **좌상단과 우하단 두 개**로 나타내고, `Ground Truth Box`에서 **좌상단 모서리에 특정 객체가 위치할 확률과 우하단 모서리에 특정 객체가 위치할 확률은 동일**하다.
+`Box`를 **좌상단과 우하단 두 개**로 나타내고, `Ground Truth Box`에서 **좌상단 모서리에 특정 객체가 위치할 확률과 우하단 모서리에 특정 객체가 위치할 확률은 동일하다.**
 
-그리고 `Image`의 각 `Pixel`이 **특정 객체의 좌상단이 될 확률을 포함한 `Heatmap`**과 **특정 객체의 우하단이 될 확률을 포함한 `Heatmap`**를 출력하게 한다.
+그리고 `Image`의 각 `Pixel`이 **특정 객체의 좌상단이 될 확률을 포함한 `Heatmap`과** **특정 객체의 우하단이 될 확률을 포함한 `Heatmap`를** 출력하게 한다.
 
 - 이미지의 각 `Pixel`을 `Cross Entropy Loss`로 `Training`할 수 있다.
 
-좌상단을 표현하는 `Heatmap`과 우하단을 표현하는 `Heatmap`에서 **같은 객체를 가리키는 `좌상단 Pixel`과 `우하단 Pixel`을 연결**하기 위해, **쌍을 이루는 Pixel은 같은 `Embedding Vector`를 갖도록 학습**힌다.
+좌상단을 표현하는 `Heatmap`과 우하단을 표현하는 `Heatmap`에서 **같은 객체를 가리키는 `좌상단 Pixel`과 `우하단 Pixel`을 연결**하기 위해, **쌍을 이루는 Pixel은 같은 `Embedding Vector`를 갖도록 학습한다.**
 
 
 ![alt text](image-614.png)
