Update 16. Detection and Segmentation.md

--- a/Machigan - [EECS 498-007, 598-005]/16. Detection and Segmentation.md
+++ b/Machigan - [EECS 498-007, 598-005]/16. Detection and Segmentation.md
@@ -79,7 +79,7 @@ ___
 
 `Box`를 **좌상단과 우하단 두 개**로 나타내고, `Ground Truth Box`에서 **좌상단 모서리에 특정 객체가 위치할 확률과 우하단 모서리에 특정 객체가 위치할 확률은 동일하다.**
 
-그리고 `Image`의 각 `Pixel`이 **특정 객체의 좌상단이 될 확률을 포함한 `Heatmap`과** **특정 객체의 우하단이 될 확률을 포함한 `Heatmap`를** 출력하게 한다.
+그리고 `Image`의 각 `Pixel`이 **특정 객체의 좌상단이 될 확률을 포함한 `Heatmap`과 특정 객체의 우하단이 될 확률을 포함한 `Heatmap`를** 출력하게 한다.
 
 - 이미지의 각 `Pixel`을 `Cross Entropy Loss`로 `Training`할 수 있다.
 
@@ -128,7 +128,7 @@ ___
    
    - 한 `Pixel`에 대해 예측을 할 때에도, 주변 정보를 알고 예측하는 것이 좋기 때문에, 큰 `Receptive field`를 갖는 것은 좋다. 
 
-2. `Image`에서의 분할은 보통 `High resolution image`에서 이루어지며, **`Convolution`을 `High resolution image`에서 수행하는 것은 계산 비용이 크다.**
+2. `Image`에서의 `Detection`은 보통 `High resolution image`에서 이루어지며, **`Convolution`을 `High resolution image`에서 수행하는 것은 계산 비용이 크다.**
 
 **연산량이 많다는 문제** 때문에, 이 방법도 사용하지 않는다.
 
