Update 16. Detection and Segmentation.md

--- a/Machigan - [EECS 498-007, 598-005]/16. Detection and Segmentation.md
+++ b/Machigan - [EECS 498-007, 598-005]/16. Detection and Segmentation.md
@@ -228,6 +228,8 @@ ___
 
 - 오른쪽 예시에서는 `Input` 4개가 `Output` 6개로 `Upsampling`된 것을 확인할 수 있다.
 
+- `Upsampling` 과정에서 사용되는 `Stride`는 보통 `Downsampling` 과정에서 사용된 `Stride`에 대응된다.
+
 ![alt text](image-628.png)
 
 - `Transposed convolution`에서 `Stride`가 1보다 크면 일반적인 `Conv`로 표현되지 않는다.
