--- a/Courses/Machigan_[EECS_498_007,598_005]/13. Attention.md
+++ b/Courses/Machigan_[EECS_498_007,598_005]/13. Attention.md
@@ -42,7 +42,9 @@ ___
 
 `Alignment score`는 `Decoder`의 이전 `Hidden state`와 `Encoder`의 `Hidden state`를 이용하여 구한다.
 
-- $e_{t, i}$는 `Decoder`의 **$t$번째 `Hidden state`를 구할 때, `Encoder`의 $i$번째 `Input`이 얼마나 영향을 미치는 지를 나타낸다.**
+- $e_{t, i}$는 `Decoder`의 **$t$번째 `Hidden state`를 구할 때, `Encoder`의 $i$번째 `hidden state`가 얼마나 영향을 미치는 지를 나타낸다.**
+
+- Decoder에서 각 Time step마다 전체 Hidden state를 보고, 현재 생성 / 번역해야하는 단어와 가장 관련있는 Hidden state를 찾는다.
 
 ![alt text](image-475.png)
 ![alt text](image-476.png)
@@ -54,7 +56,7 @@ ___
 
 따라서 **확률적인 의미**를 부여하기 위해, **`Softmax`를 이용한다.**
 
-- 기본적으로 `Decoder`의 **$t$번째 `Time step`에 해당하는 `Context vector`**를 구하는 것이기 때문에, **$i$에 대해 `Softmax`를** 구한다.
+- 기본적으로 `Decoder`의 **$t$번째 `Time step`에 해당하는 `Context vector`를** 구하는 것이기 때문에, **$i$에 대해 `Softmax`를** 구한다.
 
 - 이를 `Attention weight`라고 부른다.
 
@@ -145,7 +147,7 @@ ___
 
 `RNN+Attention`을 `Neural Network`에 삽입하거나 다양한 작업에 적용하기 위해 **일반화**해보자.
 
-> 먼저, `RNN+Attention`에서의 **`Decoder`의 `Previous Hidden state`를 `Query`가 대체하고, `Encoder`의 `Input`을 $X$가 대체**한다.
+> 먼저, `RNN+Attention`에서의 **`Decoder`의 `Previous Hidden state`를 `Query`가 대체하고, `Encoder`의 `Hidden state`를 $X$가 대체**한다.
 
 ![alt text](image-489.png)
 
